update items#show style

--- a/app/stylesheets/items/_show.sass
+++ b/app/stylesheets/items/_show.sass
@@ -4,28 +4,37 @@ body.items-show
     display: block
     margin-bottom: 1em
     padding: 1em 0
+    
     div, img
       +inline-block
+      
     div
       text-align: left
+      
     a
       font-size: 75%
       margin-left: 1em
+      
   #item-thumbnail
     border: 1px solid $module-border-color
     height: 80px
     margin-right: .5em
     width: 80px
+    
   #item-name
     margin-bottom: 0
+    
   #item-preview
     div
       float: left
+      
   #item-preview-species
     width: 400px
+    
     a, img
       height: 50px
       width: 50px
+      
     a
       +inline-block
       &.current
@@ -38,14 +47,17 @@ body.items-show
         //background: rgba(255, 255, 255, .5);
         &.current
           outline-color: $error_border_color
+          
   #item-preview-error
     display: none
     padding: 20px 10px 0
     width: 380px
+    
   #item-preview-swf
     height: 300px
     overflow: hidden
     width: 300px
+    
   #item-zones
     font:
       family: $text-font
@@ -57,8 +69,10 @@ body.items-show
 
       &:first-child
         margin-right: 1em
+        
   #trade-hangers
     font-size: 85%
+    margin-bottom: 3em
     text-align: left
 
     p
@@ -96,12 +110,14 @@ body.items-show
         display: none
 
   #item-preview-header
-    margin-top: 3em
+    clear: both
+    
     h3, a
       +inline-block
     a
       font-size: 85%
       margin: -1.5em 0 0 1em
+    
   .nc-icon
     height: 16px
     width: 16px
@@ -110,6 +126,7 @@ body.items-show
     border: 1px solid $module-border-color
     float: right
     font-size: 85%
+    margin-bottom: 3em
     margin-left: 1em
     padding: 1em
     width: 30em
@@ -137,7 +154,7 @@ body.items-show
           list-style: none
           word-wrap: break-word
           
-          &.unlisted
+          label.unlisted
             font-style: italic
 
     form
