add ajax auth for closet_hangers#index

--- a/app/views/closet_hangers/index.html.haml
+++ b/app/views/closet_hangers/index.html.haml
@@ -117,5 +117,6 @@
 
 - content_for :javascripts do
   = include_javascript_libraries :jquery
-  = javascript_include_tag 'jquery.ui', 'jquery.jgrowl', 'placeholder', 'closet_hangers/index'
+  = javascript_include_tag 'ajax_auth', 'jquery.ui', 'jquery.jgrowl',
+    'placeholder', 'closet_hangers/index'
 
