fix petpage export styles
thumbnails were right-aligned when they really shouldn't have been

--- a/app/views/closet_hangers/_petpage_content.html.haml
+++ b/app/views/closet_hangers/_petpage_content.html.haml
@@ -50,7 +50,9 @@
     }
 
     .dti-item-thumbnail {
+      display: block;
       height: 80px;
+      margin: 0 auto;
       width: 80px;
     }
 
