--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -1342,11 +1342,96 @@ body.closet_hangers-petpage #secondary-nav {
   display: block;
   margin-top: 0.75em;
 }
-/* line 4, ../../../app/stylesheets/closet_hangers/_petpage.sass */
+/* line 7, ../../../app/stylesheets/closet_hangers/_petpage.sass */
 body.closet_hangers-petpage #intro {
   clear: both;
 }
-/* line 7, ../../../app/stylesheets/closet_hangers/_petpage.sass */
+/* line 10, ../../../app/stylesheets/closet_hangers/_petpage.sass */
+body.closet_hangers-petpage #petpage-closet-lists {
+  overflow: hidden;
+  display: inline-block;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -o-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -khtml-border-radius: 10px;
+  border-radius: 10px;
+  border: 1px solid #aaddaa;
+  margin-bottom: 1.5em;
+  padding: 0.5em 1.5em;
+}
+/* line 8, ../../../app/stylesheets/partials/clean/_mixins.sass */
+body.closet_hangers-petpage #petpage-closet-lists {
+  display: block;
+}
+/* line 17, ../../../app/stylesheets/closet_hangers/_petpage.sass */
+body.closet_hangers-petpage #petpage-closet-lists > div {
+  margin: 0.25em 0;
+}
+/* line 20, ../../../app/stylesheets/closet_hangers/_petpage.sass */
+body.closet_hangers-petpage #petpage-closet-lists h4 {
+  display: -moz-inline-box;
+  -moz-box-orient: vertical;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  width: 8em;
+  vertical-align: middle;
+}
+/* line 7, ../../../../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+body.closet_hangers-petpage #petpage-closet-lists h4 {
+  *display: inline;
+}
+/* line 25, ../../../app/stylesheets/closet_hangers/_petpage.sass */
+body.closet_hangers-petpage #petpage-closet-lists h4::after {
+  content: ":";
+}
+/* line 28, ../../../app/stylesheets/closet_hangers/_petpage.sass */
+body.closet_hangers-petpage #petpage-closet-lists ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+/* line 33, ../../../app/stylesheets/closet_hangers/_petpage.sass */
+body.closet_hangers-petpage #petpage-closet-lists ul li {
+  display: -moz-inline-box;
+  -moz-box-orient: vertical;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  font-size: 85%;
+  margin: 0.25em 0.5em;
+  padding: 1px;
+}
+/* line 7, ../../../../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+body.closet_hangers-petpage #petpage-closet-lists ul li {
+  *display: inline;
+}
+/* line 39, ../../../app/stylesheets/closet_hangers/_petpage.sass */
+body.closet_hangers-petpage #petpage-closet-lists ul li label {
+  padding: 0.25em 0.75em 0.25em 0.25em;
+}
+/* line 42, ../../../app/stylesheets/closet_hangers/_petpage.sass */
+body.closet_hangers-petpage #petpage-closet-lists ul li.checked {
+  background: #eeffee;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -o-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -khtml-border-radius: 3px;
+  border-radius: 3px;
+  border: 1px solid #006600;
+  padding: 0;
+}
+/* line 48, ../../../app/stylesheets/closet_hangers/_petpage.sass */
+body.closet_hangers-petpage #petpage-closet-lists ul li.unlisted {
+  font-style: italic;
+}
+/* line 51, ../../../app/stylesheets/closet_hangers/_petpage.sass */
+body.closet_hangers-petpage #petpage-closet-lists input[type=submit] {
+  float: right;
+}
+/* line 54, ../../../app/stylesheets/closet_hangers/_petpage.sass */
 body.closet_hangers-petpage #petpage-output {
   display: block;
   height: 30em;
@@ -1414,6 +1499,10 @@ body.neopets_pages-new #back-to-items, body.neopets_pages-create #back-to-items 
   /* http://www.zurb.com/blog_uploads/0000/0617/buttons-03.html */
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
   background: #006400 url('/images/alert-overlay.png?1315327995') repeat-x;
   border: 0;
   display: inline-block;
@@ -1586,6 +1675,10 @@ body.items {
 body.items .campaign-progress-wrapper {
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
+  -o-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -khtml-border-radius: 8px;
+  border-radius: 8px;
   background: #aaaaaa;
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #cccccc), color-stop(100%, #aaaaaa));
   background-image: -moz-linear-gradient(top, #cccccc 0%, #aaaaaa 100%);
@@ -1720,8 +1813,11 @@ body.items-show #item-header div, body.items-show #item-header img {
   -moz-box-orient: vertical;
   display: inline-block;
   vertical-align: middle;
-  *display: inline;
   *vertical-align: auto;
+}
+/* line 7, ../../../../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+body.items-show #item-header div, body.items-show #item-header img {
+  *display: inline;
 }
 /* line 11, ../../../app/stylesheets/items/_show.sass */
 body.items-show #item-header div {
@@ -1762,8 +1858,11 @@ body.items-show #item-preview-species a {
   -moz-box-orient: vertical;
   display: inline-block;
   vertical-align: middle;
-  *display: inline;
   *vertical-align: auto;
+}
+/* line 7, ../../../../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+body.items-show #item-preview-species a {
+  *display: inline;
 }
 /* line 40, ../../../app/stylesheets/items/_show.sass */
 body.items-show #item-preview-species a.current {
@@ -1863,8 +1962,11 @@ body.items-show #item-preview-header h3, body.items-show #item-preview-header a 
   -moz-box-orient: vertical;
   display: inline-block;
   vertical-align: middle;
-  *display: inline;
   *vertical-align: auto;
+}
+/* line 7, ../../../../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+body.items-show #item-preview-header h3, body.items-show #item-preview-header a {
+  *display: inline;
 }
 /* line 117, ../../../app/stylesheets/items/_show.sass */
 body.items-show #item-preview-header a {
@@ -1955,9 +2057,12 @@ body.outfits-edit #preview-toolbar form {
   -moz-box-orient: vertical;
   display: inline-block;
   vertical-align: middle;
-  *display: inline;
   *vertical-align: auto;
   margin-right: 2em;
+}
+/* line 7, ../../../../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+body.outfits-edit #preview-toolbar form {
+  *display: inline;
 }
 /* line 119, ../../../app/stylesheets/outfits/_edit.sass */
 body.outfits-edit #pet-info form {
@@ -1980,6 +2085,10 @@ body.outfits-edit #pet-state-form label {
   /* http://www.zurb.com/blog_uploads/0000/0617/buttons-03.html */
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
   background: #006400 url('/images/alert-overlay.png?1315327995') repeat-x;
   border: 0;
   display: inline-block;
@@ -2158,6 +2267,10 @@ body.outfits-edit #preview-mode.image-active.can-download #preview-download-imag
 body.outfits-edit #preview-mode-toggle {
   -moz-border-radius: 0.5em;
   -webkit-border-radius: 0.5em;
+  -o-border-radius: 0.5em;
+  -ms-border-radius: 0.5em;
+  -khtml-border-radius: 0.5em;
+  border-radius: 0.5em;
   border: 1px solid #006600;
   color: #448844;
   font-size: 85%;
@@ -2218,6 +2331,10 @@ body.outfits-edit #report-broken-image {
 body.outfits-edit #preview-sidebar {
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
+  -o-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -khtml-border-radius: 10px;
+  border-radius: 10px;
   border: 1px solid #aaddaa;
   float: left;
   height: 400px;
@@ -2308,6 +2425,10 @@ body.outfits-edit .no-assets-message {
 body.outfits-edit #no-assets-full-message {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
   background: #fff4f5;
   border: 1px solid #ffd3d5;
   color: #9b3022;
@@ -2329,9 +2450,12 @@ body.outfits-edit #preview-search-form h2 {
   -moz-box-orient: vertical;
   display: inline-block;
   vertical-align: middle;
-  *display: inline;
   *vertical-align: auto;
   margin: 0 1em 0 0;
+}
+/* line 7, ../../../../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+body.outfits-edit #preview-search-form h2 {
+  *display: inline;
 }
 /* line 326, ../../../app/stylesheets/outfits/_edit.sass */
 body.outfits-edit #preview-search-form input {
@@ -2339,8 +2463,11 @@ body.outfits-edit #preview-search-form input {
   -moz-box-orient: vertical;
   display: inline-block;
   vertical-align: middle;
-  *display: inline;
   *vertical-align: auto;
+}
+/* line 7, ../../../../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+body.outfits-edit #preview-search-form input {
+  *display: inline;
 }
 /* line 328, ../../../app/stylesheets/outfits/_edit.sass */
 body.outfits-edit #preview-search-form input[type=submit] {
@@ -2358,8 +2485,11 @@ body.outfits-edit #preview-search-form-pagination {
   -moz-box-orient: vertical;
   display: inline-block;
   vertical-align: middle;
-  *display: inline;
   *vertical-align: auto;
+}
+/* line 7, ../../../../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+body.outfits-edit #preview-search-form-pagination {
+  *display: inline;
 }
 /* line 336, ../../../app/stylesheets/outfits/_edit.sass */
 body.outfits-edit #preview-search-form-pagination a, body.outfits-edit #preview-search-form-pagination span {
@@ -2460,9 +2590,12 @@ body.outfits-edit.fullscreen #preview-search-form-help div {
   -moz-box-orient: vertical;
   display: inline-block;
   vertical-align: middle;
-  *display: inline;
   *vertical-align: auto;
   width: 48%;
+}
+/* line 7, ../../../../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+body.outfits-edit.fullscreen #preview-search-form-help div {
+  *display: inline;
 }
 /* line 399, ../../../app/stylesheets/outfits/_edit.sass */
 body.outfits-edit.fullscreen #footer {
@@ -2501,6 +2634,10 @@ body.outfits-edit .object ul li a {
   /* http://www.zurb.com/blog_uploads/0000/0617/buttons-03.html */
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
   background: #006400 url('/images/alert-overlay.png?1315327995') repeat-x;
   border: 0;
   display: inline-block;
@@ -2562,6 +2699,10 @@ body.outfits-edit .nc-icon:hover {
 body.outfits-edit .object-info {
   -moz-border-radius: 12px;
   -webkit-border-radius: 12px;
+  -o-border-radius: 12px;
+  -ms-border-radius: 12px;
+  -khtml-border-radius: 12px;
+  border-radius: 12px;
   -moz-opacity: 0.75;
   -webkit-opacity: 0.75;
   -o-opacity: 0.75;
@@ -2652,6 +2793,10 @@ body.outfits-edit #preview-outfits > ul > li img {
 body.outfits-edit #preview-outfits > ul > li .outfit-delete {
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
+  -o-border-radius: 0;
+  -ms-border-radius: 0;
+  -khtml-border-radius: 0;
+  border-radius: 0;
   background: transparent;
   display: inline;
   padding: 0;
@@ -2885,6 +3030,10 @@ body.outfits-edit #new-outfit img {
 body.outfits-edit #new-outfit .outfit-delete {
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
+  -o-border-radius: 0;
+  -ms-border-radius: 0;
+  -khtml-border-radius: 0;
+  border-radius: 0;
   background: transparent;
   display: inline;
   padding: 0;
@@ -3106,6 +3255,10 @@ body.outfits-edit form#save-outfit-form img {
 body.outfits-edit form#save-outfit-form .outfit-delete {
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
+  -o-border-radius: 0;
+  -ms-border-radius: 0;
+  -khtml-border-radius: 0;
+  border-radius: 0;
   background: transparent;
   display: inline;
   padding: 0;
@@ -3244,10 +3397,13 @@ body.outfits-edit form#save-outfit-form .outfit-star, body.outfits-edit form#sav
   -moz-box-orient: vertical;
   display: inline-block;
   vertical-align: middle;
-  *display: inline;
   *vertical-align: auto;
   float: none;
   vertical-align: top;
+}
+/* line 7, ../../../../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+body.outfits-edit form#save-outfit-form .outfit-star, body.outfits-edit form#save-outfit-form input, body.outfits-edit form#save-outfit-form button {
+  *display: inline;
 }
 /* line 554, ../../../app/stylesheets/outfits/_edit.sass */
 body.outfits-edit form#save-outfit-form .outfit-star {
@@ -3298,8 +3454,11 @@ body.outfits-edit.user-signed-in .preview-search-form-your-items {
   -moz-box-orient: vertical;
   display: inline-block;
   vertical-align: middle;
-  *display: inline;
   *vertical-align: auto;
+}
+/* line 7, ../../../../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+body.outfits-edit.user-signed-in .preview-search-form-your-items {
+  *display: inline;
 }
 /* line 586, ../../../app/stylesheets/outfits/_edit.sass */
 body.outfits-edit.user-not-signed-in #save-outfit-not-signed-in {
@@ -3366,6 +3525,10 @@ body.outfits-index #outfits .outfit-edit-link {
   /* http://www.zurb.com/blog_uploads/0000/0617/buttons-03.html */
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
   background: #006400 url('/images/alert-overlay.png?1315327995') repeat-x;
   border: 0;
   display: inline-block;
@@ -3401,6 +3564,10 @@ body.outfits-index #outfits .outfit-delete-button {
 body.outfits-new .campaign-progress-wrapper {
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
+  -o-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -khtml-border-radius: 8px;
+  border-radius: 8px;
   background: #aaaaaa;
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #cccccc), color-stop(100%, #aaaaaa));
   background-image: -moz-linear-gradient(top, #cccccc 0%, #aaaaaa 100%);
@@ -3703,6 +3870,10 @@ body.outfits-new #your-items-module h3:after {
 body.outfits-show .campaign-progress-wrapper {
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
+  -o-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -khtml-border-radius: 8px;
+  border-radius: 8px;
   background: #aaaaaa;
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #cccccc), color-stop(100%, #aaaaaa));
   background-image: -moz-linear-gradient(top, #cccccc 0%, #aaaaaa 100%);
@@ -3803,8 +3974,11 @@ body.pets-bulk #bulk-pets-form textarea, body.pets-bulk #bulk-pets-form div {
   -moz-box-orient: vertical;
   display: inline-block;
   vertical-align: middle;
-  *display: inline;
   *vertical-align: auto;
+}
+/* line 7, ../../../../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+body.pets-bulk #bulk-pets-form textarea, body.pets-bulk #bulk-pets-form div {
+  *display: inline;
 }
 /* line 7, ../../../app/stylesheets/pets/_bulk.sass */
 body.pets-bulk #bulk-pets-form textarea {
@@ -3812,13 +3986,16 @@ body.pets-bulk #bulk-pets-form textarea {
   -moz-box-orient: vertical;
   display: inline-block;
   vertical-align: middle;
-  *display: inline;
   *vertical-align: auto;
   display: inline;
   font: inherit;
   height: 1.5em;
   overflow: hidden;
   resize: none;
+}
+/* line 7, ../../../../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+body.pets-bulk #bulk-pets-form textarea {
+  *display: inline;
 }
 /* line 15, ../../../app/stylesheets/pets/_bulk.sass */
 body.pets-bulk #bulk-pets-form ul {
@@ -3831,12 +4008,15 @@ body.pets-bulk #bulk-pets-form ul li {
   -moz-box-orient: vertical;
   display: inline-block;
   vertical-align: middle;
-  *display: inline;
   *vertical-align: auto;
   background: #eeeeee;
   margin: 0 auto;
   min-width: 25%;
   text-align: left;
+}
+/* line 7, ../../../../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+body.pets-bulk #bulk-pets-form ul li {
+  *display: inline;
 }
 /* line 24, ../../../app/stylesheets/pets/_bulk.sass */
 body.pets-bulk #bulk-pets-form ul li.loaded {
@@ -3879,6 +4059,10 @@ body.pets-bulk .script-only {
 body.static-donate .campaign-progress-wrapper {
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
+  -o-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -khtml-border-radius: 8px;
+  border-radius: 8px;
   background: #aaaaaa;
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #cccccc), color-stop(100%, #aaaaaa));
   background-image: -moz-linear-gradient(top, #cccccc 0%, #aaaaaa 100%);
