keep copyright year up to date

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -71,7 +71,7 @@
             %li
               %a{:href => "mailto:#{contact_email}"} Questions, comments, bugs
         %p
-          Images &copy; 2000-2011 Neopets, Inc. All Rights Reserved.
+          Images &copy; 2000&ndash;#{Date.today.year} Neopets, Inc. All Rights Reserved.
           Used With Permission
       = yield(:javascripts)
 
