oops. accidentally used trading post url for auctions. fixed

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -13,7 +13,7 @@
       = link_to 'Shop Wizard', shop_wizard_url_for(@item)
       = link_to 'Super Wizard', super_shop_wizard_url_for(@item)
       = link_to 'Trades', trading_post_url_for(@item)
-      = link_to 'Auctions', trading_post_url_for(@item)
+      = link_to 'Auctions', auction_genie_url_for(@item)
 
 - if user_signed_in?
   #closet-hangers
