--- a/app/views/broken_image_reports/new.html.haml
+++ b/app/views/broken_image_reports/new.html.haml
@@ -12,7 +12,7 @@
 %ul#report-assets
   - @swf_assets.each do |swf_asset|
     %li
-      = link_to image_tag(swf_asset.s3_url([150, 150])), swf_asset.url
+      = link_to image_tag(swf_asset.image_url([150, 150])), swf_asset.url
       - unless swf_asset.image_pending_repair?
         = form_tag(:action => :create) do
           = hidden_field_tag 'swf_asset_remote_id', swf_asset.remote_id
